fixed some bugs and added some functional
